added faulthandler config

--- a/db_setup/.dc_config.example
+++ b/db_setup/.dc_config.example
@@ -9,3 +9,4 @@ export DCDB_PASS="dcbotpasshere"
 export DCDB_USER="dcbot"
 export DCDB_HOST="hostgoeshere"
 export DCDB_NAME="deep_classiflie"
+export PYTHONFAULTHANDLER=1
